package fr.uga.l3miage.pc.prisonersdilemma.utils;

public enum Decision {
    COOPERATE, BETRAY
}

